node-main/deps/v8/test/message/fail/modules-import3.out
*%(basename)s:5: SyntaxError: The requested module 'modules-import3.mjs' does not provide an export named 'default'
import foo from "modules-import3.mjs";
       ^^^
SyntaxError: The requested module 'modules-import3.mjs' does not provide an export named 'default'

